--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,31 @@
 	</build>
 	<profiles>
 		<profile>
+			<id>dependencyReport</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>io.spring.platform.maven</groupId>
+						<artifactId>dependency-info-maven-plugin</artifactId>
+						<version>1.0.0.BUILD-SNAPSHOT</version>
+						<inherited>false</inherited>
+						<executions>
+							<execution>
+								<phase>prepare-package</phase>
+								<id>report</id>
+								<goals>
+									<goal>report</goal>
+								</goals>
+								<configuration>
+									<attach>true</attach>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>default</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
