Config metadata annotation processor
This commit adds an annotation processor that generates a metadata
file at compile time with all the configuration items discovered in the
source code. A configuration item is a property that can be configured
through the environment: it has an id (the property key), a type and
a description. Items are gathered in groups that are identifed by a
common prefix in the key. For instance server.port and server.name are
two keys from the "server" group.

A group has one or more types and each item defines to which group
type(s) it belongs to. This allows to precisely identify which
properties are available when a set of subtypes are parsed. A typical
example is "spring.datasource" that can be configured against different
supported data source types. Most properties are common (and therefore
linked to all group types) but others are specific to one or two
implementations.

The String representation of the type is similar to the output of
java.lang.Class#getName(). Considering a Bar inner class in the
org.foo.Foo class, the compiler returns the type as org.foo.Foo.Bar
while a Class would return org.foo.Foo$Bar. The $ special character
allows to easily identify the root class which is an interesting
feature if a link to the root class should be provided, i.e. for
documentation purposes.

Elements in the metadata are to be defined in standard camel case
format. Root groups may use dots to separate logical elements even
there is not parent group to represent them.

The annotation processor is triggered by the @ConfigurationProperties
and @ConditionalOnProperty annotations.

@ConfigurationProperties can be set on classes and methods. When set
on a class, the regular (JavaBean) properties are processed. The id,
type and description of each item are harvested. The description of the
property is retrieved from the javadoc with the following precedence:
field, getter and setter. The type of the property is taken from
setter, field and getter res

--- a/spring-boot-actuator/pom.xml
+++ b/spring-boot-actuator/pom.xml
@@ -151,6 +151,12 @@
 			<artifactId>commons-dbcp</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!-- config metadata -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-config-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
