--- a/spring-boot-dependencies/pom.xml
+++ b/spring-boot-dependencies/pom.xml
@@ -103,7 +103,7 @@
 		<solr.version>4.7.2</solr.version>
 		<spock.version>0.7-groovy-2.0</spock.version>
 		<spring.version>4.1.0.RELEASE</spring.version>
-		<spring-amqp.version>1.3.5.RELEASE</spring-amqp.version>
+		<spring-amqp.version>1.4.0.M1</spring-amqp.version>
 		<spring-cloud.version>1.1.0.RELEASE</spring-cloud.version>
 		<spring-batch.version>3.0.1.RELEASE</spring-batch.version>
 		<spring-data-releasetrain.version>Dijkstra-SR4</spring-data-releasetrain.version>
