--- a/spring-boot-actuator/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/spring-boot-actuator/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -61,7 +61,7 @@
   {
     "name": "management.health.mail.enabled",
     "type": "java.lang.Boolean",
-    "description": "Enable JavaMail health check.",
+    "description": "Enable Mail health check.",
     "defaultValue": true
   },
   {
