--- a/spring-boot-dependencies/pom.xml
+++ b/spring-boot-dependencies/pom.xml
@@ -60,6 +60,8 @@
 		<crashub.version>1.3.1</crashub.version>
 		<derby.version>10.10.2.0</derby.version>
 		<dropwizard-metrics.version>3.1.0</dropwizard-metrics.version>
+		<ehcache.version>2.9.1</ehcache.version>
+		<ehcache-jcache.version>1.0.0</ehcache-jcache.version>
 		<flyway.version>3.1</flyway.version>
 		<freemarker.version>2.3.22</freemarker.version>
 		<gemfire.version>7.0.2</gemfire.version>
@@ -672,6 +674,11 @@
 				<version>${mysql.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>net.sf.ehcache</groupId>
+				<artifactId>ehcache</artifactId>
+				<version>2.9.1</version>
+			</dependency>
+			<dependency>
 				<groupId>nz.net.ultraq.thymeleaf</groupId>
 				<artifactId>thymeleaf-layout-dialect</artifactId>
 				<version>${thymeleaf-layout-dialect.version}</version>
@@ -823,6 +830,11 @@
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
 				<version>${aspectj.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.ehcache</groupId>
+				<artifactId>jcache</artifactId>
+				<version>${ehcache-jcache.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.btm</groupId>
