--- a/spring-boot-samples/spring-boot-sample-cache/pom.xml
+++ b/spring-boot-samples/spring-boot-sample-cache/pom.xml
@@ -53,6 +53,10 @@
 			<groupId>org.infinispan</groupId>
 			<artifactId>infinispan-spring4</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.infinispan</groupId>
+			<artifactId>infinispan-jcache</artifactId>
+		</dependency>
 		-->
 
 		<dependency>
