--- a/spring-boot-samples/spring-boot-sample-cache/src/main/resources/application.properties
+++ b/spring-boot-samples/spring-boot-sample-cache/src/main/resources/application.properties
@@ -5,3 +5,10 @@
 # Infinispan configuration file location.
 #
 #spring.cache.infinispan.config=infinispan.xml
+
+
+#
+# JCache configuration (example with hazelcast).
+#
+#spring.cache.type=jcache
+#spring.cache.jcache.config=hazelcast.xml
