--- a/spring-boot-samples/spring-boot-sample-cache/src/main/resources/application.properties
+++ b/spring-boot-samples/spring-boot-sample-cache/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 
 
-
 #
 # Infinispan configuration file location.
 #
@@ -12,3 +11,9 @@
 #
 #spring.cache.type=jcache
 #spring.cache.jcache.config=hazelcast.xml
+
+
+#
+# Guava configuration
+#
+#spring.cache.guava.spec=maximumSize=200,expireAfterAccess=600s
