--- a/spring-boot/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/spring-boot/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -113,5 +113,52 @@
     "type": "java.lang.String",
     "description": "Unconditionally activate the specified comma separated profiles."
   }
+],"hints": [
+  {
+    "name": "logger.level.keys",
+    "values": [
+      {
+        "value": "root",
+        "description": "Root logger used to assign the default logging level."
+      }
+    ],
+    "providers": [
+      {
+        "name": "logger-name"
+      }
+    ]
+  },
+  {
+    "name": "logger.level.values",
+    "values": [
+      {
+        "value": "trace"
+      },
+      {
+        "value": "debug"
+      },
+      {
+        "value": "info"
+      },
+      {
+        "value": "warn"
+      },
+      {
+        "value": "error"
+      },
+      {
+        "value": "fatal"
+      },
+      {
+        "value": "off"
+      }
+
+    ],
+    "providers": [
+      {
+        "name": "any"
+      }
+    ]
+  }
 ]}
 
