--- a/spring-boot-actuator/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/spring-boot-actuator/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -35,6 +35,12 @@
     "defaultValue": true
   },
   {
+    "name": "management.health.default.enabled",
+    "type": "java.lang.Boolean",
+    "description": "Enable default health indicators.",
+    "defaultValue": true
+  },
+  {
     "name": "management.health.diskspace.enabled",
     "type": "java.lang.Boolean",
     "description": "Enable disk space health check.",
