--- a/spring-boot-autoconfigure/src/test/resources/META-INF/boot/build.properties
+++ b/spring-boot-autoconfigure/src/test/resources/META-INF/boot/build.properties
@@ -1,4 +1,4 @@
 build.group=com.example
 build.artifact=demo
 build.version=0.0.1-SNAPSHOT
-build.timestamp=2016-03-04T11:02:00+0100
+build.time=2016-03-04T15\:16\:05+01
