--- a/spring-boot-autoconfigure/src/test/resources/org/springframework/boot/autoconfigure/info/build.properties
+++ b/spring-boot-autoconfigure/src/test/resources/org/springframework/boot/autoconfigure/info/build.properties
@@ -1,4 +1,4 @@
 build.group=com.example.acme
 build.artifact=acme
 build.version=1.0.1-SNAPSHOT
-build.timestamp=2016-03-04T11:42:00+0100
+build.time=2016-03-04T11:42:00+0100
