--- a/spring-boot-dependencies/pom.xml
+++ b/spring-boot-dependencies/pom.xml
@@ -144,18 +144,18 @@
 		<snakeyaml.version>1.17</snakeyaml.version>
 		<solr.version>5.5.2</solr.version>
 		<spock.version>1.0-groovy-2.4</spock.version>
-		<spring.version>4.3.3.BUILD-SNAPSHOT</spring.version>
+		<spring.version>5.0.0.BUILD-SNAPSHOT</spring.version>
 		<spring-amqp.version>1.6.2.RELEASE</spring-amqp.version>
 		<spring-cloud-connectors.version>1.2.3.RELEASE</spring-cloud-connectors.version>
 		<spring-batch.version>3.0.7.RELEASE</spring-batch.version>
 		<spring-data-releasetrain.version>Hopper-BUILD-SNAPSHOT</spring-data-releasetrain.version>
-		<spring-hateoas.version>0.20.0.RELEASE</spring-hateoas.version>
+		<spring-hateoas.version>0.21.0.BUILD-SNAPSHOT</spring-hateoas.version>
 		<spring-integration.version>4.3.1.RELEASE</spring-integration.version>
 		<spring-integration-java-dsl.version>1.1.3.RELEASE</spring-integration-java-dsl.version>
 		<spring-loaded.version>1.2.6.RELEASE</spring-loaded.version>
 		<spring-mobile.version>1.1.5.RELEASE</spring-mobile.version>
 		<spring-plugin.version>1.2.0.RELEASE</spring-plugin.version>
-		<spring-restdocs.version>1.1.1.RELEASE</spring-restdocs.version>
+		<spring-restdocs.version>1.2.0.BUILD-SNAPSHOT</spring-restdocs.version>
 		<spring-retry.version>1.1.3.RELEASE</spring-retry.version>
 		<spring-security.version>4.1.3.RELEASE</spring-security.version>
 		<spring-security-jwt.version>1.0.4.RELEASE</spring-security-jwt.version>
